# CO2EnginePredictor

./: README.md  pyproject.toml
notebooks/: test_model.ipynb
src/: main.py  train.py
